test/conformance/chainsaw/policy-validation/cluster-policy/cel-expressions/policy-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-deployment-replicas
spec:
  background: true
  rules:
    - name: check-deployment-replicas
      match:
        any:
        - resources:
            kinds:
              - Deployment
      validate:
        failureAction: Enforce
        cel:
          expressions:
            - expression: "object.replicas > 1" # should be "object.spec.replicas > 1"
              message: "must be replicated"
